--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -9,6 +9,7 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --text-color: #9e8772;
 }
 
 @media (prefers-color-scheme: dark) {
