--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -10,6 +10,8 @@
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
   --text-color: #9e8772;
+  --lighter-green: #f5f5d5;
+  --darker-green: #81a651;
 }
 
 @media (prefers-color-scheme: dark) {
